[project]
name = "personal-python"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
 "aiobotocore>=2.25.1",
 "aiofile>=3.9.0",
 "aiohttp>=3.12.15",
 "amazon-ion>=0.13.0",
 "amazon-transcribe>=0.6.4",
 "antlr4-python3-runtime>=4.13.2",
 "anyio>=4.10.0",
 "apig-wsgi>=2.19.0",
 "apsw>=3.50.4.0",
 "arrow>=1.3.0",
 "atomicwrites>=1.4.1",
 "attrs>=25.3.0",
 "auth0-python>=4.10.0",
 "awacs>=2.5.0",
 "aws-cryptographic-material-providers>=1.11.1",
 "aws-embedded-metrics>=3.3.0",
 "aws-encryption-sdk>=4.0.3",
 "aws-lambda-powertools>=3.19.0",
 "aws-xray-sdk>=2.14.0",
 "awscrt>=0.26.1",
 "bbpb>=1.4.2",
 "beautifulsoup4>=4.13.5",
 "bgutil-ytdlp-pot-provider>=1.2.2",
 "black>=25.1.0",
 "bleach>=6.2.0",
 "boltons>=25.0.0",
 "boto3>=1.40.25",
 "cached-property>=2.0.1",
 "cachetools>=5.5.2",
 "caio>=0.9.24",
 "certifi>=2025.6.15",
 "chardet>=5.2.0",
 "cherrypy>=18.10.0",
 "click>=8.2.1",
 "clickhouse-driver>=0.2.9",
 "colorama>=0.4.6",
 "configargparse>=1.7.1",
 "construct>=2.10.70",
 "cruft[pyproject]>=2.16.0",
 "cryptography>=45.0.7",
 "cssselect>=1.3.0",
 "cycler>=0.12.1",
 "cython>=3.1.3",
 "dataclasses-json>=0.6.7",
 "datasette>=0.65.1",
 "dateparser>=1.2.2",
 "deepdiff>=8.6.1",
 "dill>=0.4.0",
 "discord-py>=2.6.3",
 "django>=5.2.6",
 "dnspython>=2.7.0",
 "docopt>=0.6.2",
 "dominate>=2.9.1",
 "fastecdsa>=3.0.1",
 "flake8>=7.3.0",
 "flask>=3.1.2",
 "flit>=3.12.0",
 "fpdf>=1.7.2",
 "ftfy>=6.3.1",
 "fuzzywuzzy>=0.18.0",
 "geopy>=2.4.1",
 "gevent>=25.8.2",
 "gmpy2>=2.2.1",
 "google-generativeai>=0.8.5",
 "h11>=0.16.0",
 "h2>=4.3.0",
 "html5lib>=1.1",
 "httpx>=0.28.1",
 "humanize>=4.13.0",
 "hypothesis>=6.138.14",
 "imagehash>=4.3.2",
 "ipython>=9.5.0",
 "isort>=6.0.1",
 "jinja2>=3.1.6",
 "jmespath>=1.0.1",
 "jsonpath-ng>=1.7.0",
 "jsonschema>=4.25.1",
 "kiwisolver>=1.4.9",
 "lark>=1.2.2",
 "lazy-object-proxy>=1.12.0",
 "ldap3>=2.9.1",
 "llvmlite==0.44.0",
 "lxml>=6.0.1",
 "mako>=1.3.10",
 "mangum>=0.19.0",
 "marshmallow>=3.26.1",
 "matplotlib>=3.10.6",
 "mergedeep>=1.3.4",
 "mock>=5.2.0",
 "morphys>=1.0",
 "mypy>=1.17.1",
 "myst-parser>=4.0.1",
 "natsort>=8.4.0",
 "networkx>=3.5",
 "nltk>=3.9.1",
 "nuitka>=2.7.13",
 "numpy>=2.3.2",
 "oauthlib>=3.3.1",
 "openai>=1.106.1",
 "opencv-python>=4.11.0.86",
 "orjson>=3.11.3",
 "packmodule>=1.0.0",
 "paho-mqtt>=2.1.0",
 "pandas>=2.3.2",
 "paramiko>=4.0.0",
 "parse>=1.20.2",
 "pasimple>=0.0.3",
 "peewee>=3.18.2",
 "pillow>=11.3.0",
 "psutil>=7.0.0",
 "psycopg2-binary>=2.9.10",
 "publication>=0.0.3",
 "publicsuffix2>=2.20191221",
 "py-multihash>=2.0.1",
 "pyarrow>=21.0.0",
 "pyasn1>=0.6.1",
 "pyasn1-modules>=0.4.2",
 "pyaudio>=0.2.14",
 "pycares>=4.10.0",
 "pychrome>=0.2.4",
 "pycipher>=0.5.2",
 "pycryptodome>=3.23.0",
 "pydantic>=2.11.7",
 "pyelftools>=0.32",
 "pyflakes>=3.4.0",
 "pygments>=2.19.2",
 "pygraphviz>=1.14",
 "pyjks>=20.0.0",
 "pykerberos>=1.2.4",
 "pylint>=3.3.8",
 "pynamodb>=6.1.0",
 "pypdf2>=3.0.1",
 "pyroaring>=1.0.3",
 "pyserial>=3.5",
 "pysimdjson>=7.0.2",
 "pysnmp>=7.1.21",
 "pysocks>=1.7.1",
 "pytesseract>=0.3.13",
 "pytest>=8.4.1",
 "pytest-black>=0.6.0",
 "pytest-cov>=6.2.1",
 "pytest-mypy>=1.0.1",
 "pytest-trio>=0.8.0",
 "python-dateutil>=2.9.0.post0",
 "python-jose>=3.5.0",
 "python-libarchive>=4.2.1",
 "python-magic>=0.4.27",
 "python-slugify>=8.0.4",
 "pyyaml>=6.0.2",
 "rdflib>=7.1.4",
 "redis>=6.4.0",
 "redshift-connector>=2.1.7",
 "requests>=2.32.4",
 "requests-aws4auth>=1.3.1",
 "requests-toolbelt>=1.0.0",
 "retrying>=1.4.2",
 "rich>=14.0.0",
 "ruff>=0.12.8",
 "sansio-multipart>=0.3",
 "scapy>=2.6.1",
 "scikit-learn>=1.7.1",
 "scipy>=1.16.1",
 "scrapy>=2.13.3",
 "seaborn>=0.13.2",
 "selectolax>=0.3.34",
 "selenium>=4.35.0",
 "simplejson>=3.20.1",
 "six>=1.17.0",
 "smartcrop>=0.4.1",
 "sounddevice>=0.5.2",
 "sphinx>=8.2.3",
 "sphinx-autoapi>=3.6.0",
 "sqlalchemy>=2.0.43",
 "sqlalchemy-utils>=0.42.0",
 "sqlmap>=1.9.9",
 "sseclient>=0.0.27",
 "structlog>=25.4.0",
 "sympy>=1.14.0",
 "tenacity>=9.1.2",
 "termcolor>=3.1.0",
 "textual>=6.1.0",
 "toml>=0.10.2",
 "toutatis>=1.31",
 "traits>=7.0.2",
 "trio>=0.30.0",
 "trio-asyncio>=0.15.0",
 "trio-websocket>=0.12.2",
 "troposphere>=4.9.4",
 "tweepy>=4.16.0",
 "typer>=0.16.0",
 "typing-inspect>=0.9.0",
 "ujson>=5.11.0",
 "ulid-py>=1.1.0",
 "unicorn>=2.1.3",
 "unix-ar>=0.2.1",
 "urllib3>=2.5.0",
 "varint>=1.0.2",
 "vdf>=3.4",
 "waitress>=3.0.2",
 "watchtower>=3.4.0",
 "webrtcvad>=2.0.10",
 "webvtt-py>=0.5.1",
 "wrapt>=1.17.3",
 "wsaccel>=0.6.7",
 "wsproto>=1.2.0",
 "xortool>=1.1.0",
 "yarl>=1.20.1",
 "yq>=3.4.3",
 "yt-dlp[default]>=2025.9.5",
 "z3>=0.2.0",
 "zeep>=4.3.1",
 "zeroconf>=0.147.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
